# Vulkanstein3D

./: .gitattributes  .gitignore  Broker.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FetchAssets.cmake  README.md  TODO  VALIDATION.md  dependencies.cmake  loc.sh  sss.txt  sss2.txt
cmake/: dependencies.cmake
data/DamagedHelmet/: DamagedHelmetWebp.glb  README.md
data/ScatteringSkull/: LICENSE.md  README.body.md  README.md  metadata.json
data/ScatteringSkull/glTF/: ScatteringSkull.gltf
debugMessenger/: CMakeLists.txt  instance.cpp  instance.h  instance2.cpp  instance2.h  main.cpp  main0.cpp  main1.cpp  main2.cpp
doc/: ownership.puml  pipeline.puml
engine/: engine.h  exception.cpp  exception.h  instance.cpp  instance.h  representation.cpp  representation.h
helloTriangle/: CMakeLists.txt  main.cpp
localdata/: ply_to_gltf.py
sps/: TODO
sps/vulkan/: CMakeLists.txt  acceleration_structure.cpp  acceleration_structure.h  app.cpp  app.h  app_config.cpp  app_config.h  buffer.cpp  buffer.h  camera.cpp  camera.h  command_file.cpp  command_file.h  command_registry.h  commands.cpp  commands.h  config.h.in  debug_constants.h  depth_stencil_attachment.cpp  depth_stencil_attachment.h  descriptor_builder.cpp  descriptor_builder.h  device.cpp  device.h  device_old.cpp  device_old.h  device_simple.cpp  device_simple.h  engine.cpp  enumerate.cpp  enumerate.h  exception.cpp  exception.h  fence.cpp  fence.h  frame.cpp  frame.h  framebuffer.cpp  framebuffer.h  gltf_loader.cpp  (+48 more)
sps/vulkan/shaders/: CMakeLists.txt  blinn_phong.frag  closesthit.rchit  composite.frag  debug_ao.frag  debug_basecolor.frag  debug_emissive.frag  debug_metallic_roughness.frag  debug_normals.frag  debug_sss.frag  debug_stencil.frag  debug_texture2d.frag  debug_thickness.frag  debug_uv.frag  fragment.frag  fragment_normals.frag  fullscreen_quad.vert  iridescence.glsl  miss.rmiss  raygen.rgen  sss_blur.comp  tonemap.glsl  vertex.vert  vertex_normals.vert
sps/vulkan/stages/: composite_stage.cpp  composite_stage.h  debug_2d_stage.cpp  debug_2d_stage.h  raster_blend_stage.cpp  raster_blend_stage.h  raster_opaque_stage.cpp  raster_opaque_stage.h  ray_tracing_stage.cpp  ray_tracing_stage.h  sss_blur_stage.cpp  sss_blur_stage.h  ui_stage.cpp  ui_stage.h
sps2/tools/: cla_parser.cpp  cla_parser.hpp
sps2/vulkan/: CMakeLists.txt  app.cpp  app.h  config.h.in  device.cpp  device.h  engine.h  exception.cpp  instance.cpp  instance.h  logging.cpp  logging.h  make_info.cpp  renderer.cpp  renderer.h  representation.cpp  representation.h  vulkan.hpp
vulk3D/: CMakeLists.txt  launch.sh.in  main.cpp  main2.cpp  main_imgui.cpp  vulk3D.toml  vulk3D.toml.in
vulk3D/shaders/: CMakeLists.txt  raycaster-drawer.frag.glsl  raycaster.comp.glsl  shader.vert.glsl  spritecaster.comp.glsl
